--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -1,8 +1,10 @@
 @import './App.scss';
 header {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 3rem 10%;
+  overflow: hidden;
   nav {
     display: flex;
     align-items: center;
@@ -21,6 +23,40 @@ header {
       .pill {
         padding: 0.5rem 1.5rem;
         border-radius: 1.5rem;
+      }
+    }
+  }
+  .header-body {
+    display: flex;
+    width: 98vw;
+    gap: 2rem;
+    padding: 6rem 0;
+    padding-bottom: 16;
+    .description-container {
+      display: flex;
+      flex-direction: column;
+      .heading {
+        font-size: 5rem;
+        font-weight: 700;
+        color: $very-dark-blue;
+      }
+      .description {
+        color: $grayish-violet;
+        font-size: 1.4rem;
+      }
+      .pill {
+        padding: 0.75rem 2rem;
+        border-radius: 2rem;
+        font-weight: 700;
+        font-size: 18px;
+        margin-top: 2rem;
+      }
+    }
+    .illustration {
+      width: 100%;
+      img {
+        min-width: 480px;
+        width: 100%;
       }
     }
   }
