--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -25,6 +25,7 @@ footer {
         color: #fff;
       }
       a {
+        white-space: nowrap;
         color: $grayish-violet;
         &:hover {
           color: $cyan;
@@ -50,5 +51,31 @@ footer {
     color: #fff;
     font-size: 2rem;
     font-weight: 700;
+  }
+}
+
+@media screen and(max-width:950px) {
+  footer {
+    gap: 10%;
+  }
+}
+@media screen and(max-width:780px) {
+  footer {
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+  }
+}
+@media screen and(max-width:600px) {
+  footer {
+    .footer-links {
+      width: 100%;
+      align-items: center;
+      flex-direction: column;
+      gap: 3rem;
+      .links-group {
+        text-align: center;
+      }
+    }
   }
 }
