--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -3,12 +3,19 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  padding: 3rem 10%;
+  padding: 3rem 0;
   overflow: hidden;
   nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 2rem;
+    margin: 0 10%;
+    .nav-links {
+      flex-grow: 2;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
     section {
       display: flex;
       align-items: center;
@@ -25,12 +32,78 @@ header {
         border-radius: 1.5rem;
       }
     }
+    .toggle-menu {
+      display: none;
+      position: relative;
+      z-index: 10;
+      button {
+        background-color: transparent;
+        color: $grayish-violet;
+        border: 0;
+        outline: none;
+        cursor: pointer;
+      }
+      .menu {
+        position: absolute;
+        top: 3rem;
+        right: 0.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+        background-color: $dark-violet;
+        border-radius: 0.5rem;
+        visibility: hidden;
+        &.show {
+          visibility: visible;
+        }
+        &::after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 80%;
+          z-index: -1;
+          border-top-right-radius: inherit;
+          box-shadow: 5px 2px $gray, 10px 4px $gray, 15px 6px $gray,
+            20px 8px $gray, 25px 10px $gray, 30px 12px $gray;
+        }
+        section {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: 2rem 0;
+          width: 80%;
+          a {
+            color: #fff;
+            font-size: 18px;
+            &:hover {
+              color: $cyan;
+            }
+            &.btn {
+              width: 100%;
+              padding: 0.75rem 0;
+              border-radius: 2rem;
+              text-align: center;
+              &:hover {
+                color: #fff;
+              }
+            }
+          }
+          &.links-section {
+            border-bottom: 1px solid #4b4164;
+          }
+        }
+      }
+    }
   }
   .header-body {
     display: flex;
-    width: 98vw;
+    width: 100%;
     gap: 2rem;
     padding: 6rem 0;
+    padding-left: 10%;
     .description-container {
       display: flex;
       flex-direction: column;
@@ -52,10 +125,68 @@ header {
       }
     }
     .illustration {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
       width: 100%;
       img {
-        min-width: 480px;
+        min-width: 300px;
         width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 980px) {
+  header {
+    .header-body {
+      .description-container {
+        .heading {
+          font-size: 4rem;
+        }
+        .description {
+          font-size: 1rem;
+        }
+        .pill {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 840px) {
+  header {
+    nav {
+      justify-content: space-between;
+      .toggle-menu {
+        display: flex;
+      }
+      .nav-links {
+        display: none;
+      }
+    }
+    .header-body {
+      flex-direction: column-reverse;
+      padding-left: 0;
+      .description-container {
+        margin: 0 10%;
+        align-self: center;
+        text-align: center;
+        align-items: center;
+      }
+      .illustration {
+        padding-left: 20%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  header {
+    .header-body {
+      .description-container {
+        .heading {
+          font-size: 3rem;
+        }
       }
     }
   }
