--- a/src/stylesheets/LinkCard.scss
+++ b/src/stylesheets/LinkCard.scss
@@ -20,7 +20,13 @@
       color: $very-dark-blue;
       margin-left: 2rem;
     }
+    span {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
     .short-link-container {
+      width: 60%;
       display: flex;
       gap: 2rem;
       align-items: center;
@@ -37,6 +43,40 @@
         font-size: inherit;
         &.copied {
           background-color: $dark-violet;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .links-list {
+    margin-top: 2rem;
+    .link-card {
+      flex-direction: column;
+      align-items: flex-start;
+
+      .full-link {
+        margin: 0;
+        width: 90%;
+        border-bottom: 1px solid $gray;
+        padding-bottom: 1rem;
+      }
+      span {
+        align-self: flex-start;
+        padding: 0rem 5.55%;
+      }
+      .short-link-container {
+        flex-direction: column;
+        gap: 2rem;
+        width: 100%;
+        .short-link {
+          width: 90%;
+        }
+        button {
+          margin: 0;
+          width: 80%;
+          padding: 0.75rem 0;
         }
       }
     }
