--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -19,6 +19,7 @@ main {
       font-size: 2.5rem;
       font-weight: 700;
       color: $very-dark-blue;
+      white-space: nowrap;
     }
     p {
       text-align: center;
@@ -41,25 +42,32 @@ main {
       height: auto;
       padding: 2rem;
       padding-top: 4.5rem;
-      .info-logo {
+      .logo-container {
+        position: absolute;
         display: flex;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        height: 5rem;
-        width: 5rem;
-        border-radius: 50%;
+        height: fit-content;
         top: -2.5rem;
         left: 2rem;
-        background-color: $dark-violet;
-        img {
-          width: 2rem;
+        .info-logo {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 5rem;
+          width: 5rem;
+          border-radius: 50%;
+          background-color: $dark-violet;
+          img {
+            width: 2rem;
+          }
         }
       }
       .card-heading {
         font-size: 1.3rem;
         font-weight: 700;
         color: $very-dark-blue;
+        white-space: nowrap;
       }
       p {
         color: $grayish-violet;
@@ -74,6 +82,46 @@ main {
       left: 5%;
       z-index: -1;
       border: 0.25rem solid $cyan;
+    }
+  }
+}
+
+@media screen and(max-width:1020px) {
+  main {
+    .info-cards {
+      transform: rotateZ(0deg);
+      grid-template-columns: minmax(0, 1fr);
+      column-gap: 0;
+      row-gap: 5rem;
+      .info-card {
+        transform: rotateZ(0deg);
+        text-align: center;
+        .logo-container {
+          left: 0;
+          width: 100%;
+        }
+      }
+      &::after {
+        transform: rotateZ(0deg);
+        width: 0;
+        height: 80%;
+        top: 5%;
+        left: 49.25%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 920px) {
+  main {
+    .site-info {
+      width: 100%;
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  main {
+    .site-info .info-heading {
+      font-size: 2rem;
     }
   }
 }
