--- a/src/stylesheets/Boost.scss
+++ b/src/stylesheets/Boost.scss
@@ -3,7 +3,6 @@
 .boost {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -17,6 +16,7 @@
     font-size: 2.5rem;
     font-weight: 700;
     color: #fff;
+    margin-bottom: 2rem;
   }
   .btn {
     font-size: 1.1rem;
