--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -5,21 +5,22 @@ footer {
   padding: 3rem 10%;
   background-color: $very-dark-violet;
   display: flex;
-  gap: 20%;
   .footer-links {
     display: flex;
     justify-content: space-between;
     height: fit-content;
     flex-grow: 2;
-    gap: 1rem;
     .links-group {
       height: fit-content;
       margin: 0;
+      margin-right: 1rem;
       padding: 0;
       list-style: none;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
+      * {
+        margin-bottom: 0.5rem;
+      }
       h4 {
         margin-top: 0;
         color: #fff;
@@ -34,8 +35,8 @@ footer {
     }
     .social-links {
       display: flex;
-      gap: 1rem;
       a {
+        margin-right: 1rem;
         img {
           filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(285deg)
             brightness(104%) contrast(105%);
@@ -51,19 +52,25 @@ footer {
     color: #fff;
     font-size: 2rem;
     font-weight: 700;
+    margin-right: 10rem;
   }
 }
 
 @media screen and(max-width:950px) {
   footer {
-    gap: 10%;
+    .logo-container {
+      margin-right: 5rem;
+    }
   }
 }
 @media screen and(max-width:780px) {
   footer {
     flex-direction: column;
     align-items: center;
-    gap: 3rem;
+    .logo-container {
+      margin: 0;
+      margin-bottom: 3rem;
+    }
   }
 }
 @media screen and(max-width:600px) {
@@ -72,9 +79,9 @@ footer {
       width: 100%;
       align-items: center;
       flex-direction: column;
-      gap: 3rem;
       .links-group {
         text-align: center;
+        margin-bottom: 3rem;
       }
     }
   }
