--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -8,8 +8,10 @@ header {
   nav {
     display: flex;
     align-items: center;
-    gap: 2rem;
     margin: 0 10%;
+    .logo {
+      margin-right: 2rem;
+    }
     .nav-links {
       flex-grow: 2;
       display: flex;
@@ -19,8 +21,8 @@ header {
     section {
       display: flex;
       align-items: center;
-      gap: 2rem;
       a {
+        margin-right: 2rem;
         font-weight: 700;
         color: $grayish-violet;
         &:hover {
@@ -28,6 +30,7 @@ header {
         }
       }
       .pill {
+        margin: 0;
         padding: 0.5rem 1.5rem;
         border-radius: 1.5rem;
       }
@@ -73,9 +76,11 @@ header {
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding: 2rem 0;
+          padding-top: 2rem;
           width: 80%;
           a {
+            margin: 0;
+            margin-bottom: 2rem;
             color: #fff;
             font-size: 18px;
             &:hover {
@@ -101,12 +106,12 @@ header {
   .header-body {
     display: flex;
     width: 100%;
-    gap: 2rem;
     padding: 6rem 0;
     padding-left: 10%;
     .description-container {
       display: flex;
       flex-direction: column;
+      margin-right: 2rem;
       .heading {
         font-size: 5rem;
         font-weight: 700;
