--- a/src/stylesheets/LinkForm.scss
+++ b/src/stylesheets/LinkForm.scss
@@ -13,7 +13,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5rem;
     background-color: $dark-violet;
     background-image: url('../images/bg-shorten-desktop.svg');
     background-repeat: no-repeat;
@@ -23,6 +22,7 @@
       position: relative;
       flex-grow: 2;
       margin-left: 6%;
+      margin-right: 5rem;
       &.empty-input {
         input {
           border: 3px solid $red;
@@ -84,7 +84,6 @@
     .link-form {
       flex-direction: column;
       height: fit-content;
-      gap: 3rem;
       background-image: url('../images/bg-shorten-mobile.svg');
       background-size: auto;
       background-position: right top;
@@ -93,6 +92,7 @@
         flex-grow: 1;
         width: 90%;
         margin: 0 5.55%;
+        margin-bottom: 3rem;
 
         input {
           padding: 1rem 5.55%;
