--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -3,16 +3,14 @@ main {
   position: relative;
   flex-grow: 2;
   background-color: $gray;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  justify-items: center;
   gap: 5rem;
   padding: 6rem 10%;
   .site-info {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 1rem;
     width: 40%;
     height: fit-content;
     .info-heading {
@@ -20,6 +18,7 @@ main {
       font-weight: 700;
       color: $very-dark-blue;
       white-space: nowrap;
+      margin-bottom: 1rem;
     }
     p {
       text-align: center;
