--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -81,6 +81,7 @@ footer {
       flex-direction: column;
       .links-group {
         text-align: center;
+        margin: 0;
         margin-bottom: 3rem;
       }
     }
